--- a/admin/package.json
+++ b/admin/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
+    "leaflet": "^1.9.4",
+    "leaflet-ant-path": "^1.3.0",
     "mongodb": "^6.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.0",
     "react-to-print": "^2.15.1"
   },
